--- a/Smack/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Smack/Base.lproj/Main.storyboard
@@ -13,6 +13,10 @@
         <array key="Avenir.ttc">
             <string>Avenir-Book</string>
         </array>
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+            <string>HelveticaNeue-Bold</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Reveal View Controller-->
@@ -32,22 +36,74 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="82" y="125"/>
+            <point key="canvasLocation" x="145" y="203"/>
         </scene>
         <!--ChannelVC-->
         <scene sceneID="n3j-ZQ-Z1C">
             <objects>
                 <viewController id="P1f-Up-zc7" customClass="ChannelVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Vi7-FM-hQi">
+                    <view key="view" contentMode="scaleToFill" id="Vi7-FM-hQi" customClass="GradientView" customModule="Smack" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Samck" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDJ-fZ-o8G">
+                                <rect key="frame" x="16" y="44" width="82" height="30"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHANNELS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L7h-zT-0NC">
+                                <rect key="frame" x="16" y="94" width="65" height="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smackProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="F9k-Ce-aXE">
+                                <rect key="frame" x="16" y="572" width="75" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="ncv-Xp-fn2"/>
+                                    <constraint firstAttribute="width" constant="75" id="wcR-w5-PJd"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yh9-ED-hDE">
+                                <rect key="frame" x="136" y="593" width="40" height="33"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="login">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2yg-1y-EVN">
+                                <rect key="frame" x="263" y="90" width="22" height="22"/>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mXk-3f-mXM">
+                                <rect key="frame" x="16" y="132" width="343" height="435"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="F9k-Ce-aXE" firstAttribute="top" secondItem="mXk-3f-mXM" secondAttribute="bottom" constant="5" id="0c3-2H-sjP"/>
+                            <constraint firstItem="yY3-jR-JwY" firstAttribute="trailing" secondItem="mXk-3f-mXM" secondAttribute="trailing" constant="16" id="1AF-tB-WK4"/>
+                            <constraint firstItem="mXk-3f-mXM" firstAttribute="leading" secondItem="yY3-jR-JwY" secondAttribute="leading" constant="16" id="AMB-NP-Iey"/>
+                            <constraint firstItem="qDJ-fZ-o8G" firstAttribute="top" secondItem="yY3-jR-JwY" secondAttribute="top" constant="24" id="BNS-Jj-7qR"/>
+                            <constraint firstItem="yY3-jR-JwY" firstAttribute="bottom" secondItem="F9k-Ce-aXE" secondAttribute="bottom" constant="20" id="CrP-dK-myZ"/>
+                            <constraint firstItem="qDJ-fZ-o8G" firstAttribute="leading" secondItem="yY3-jR-JwY" secondAttribute="leading" constant="16" id="Lcr-w7-Hmo"/>
+                            <constraint firstItem="F9k-Ce-aXE" firstAttribute="leading" secondItem="yY3-jR-JwY" secondAttribute="leading" constant="16" id="SW0-dH-yVQ"/>
+                            <constraint firstItem="yY3-jR-JwY" firstAttribute="bottom" secondItem="Yh9-ED-hDE" secondAttribute="bottom" constant="41" id="VCP-yb-8zn"/>
+                            <constraint firstItem="L7h-zT-0NC" firstAttribute="top" secondItem="qDJ-fZ-o8G" secondAttribute="bottom" constant="20" id="Y24-pL-vua"/>
+                            <constraint firstItem="Yh9-ED-hDE" firstAttribute="leading" secondItem="F9k-Ce-aXE" secondAttribute="trailing" constant="45" id="gl8-XM-bZd"/>
+                            <constraint firstItem="L7h-zT-0NC" firstAttribute="leading" secondItem="yY3-jR-JwY" secondAttribute="leading" constant="16" id="hHo-FO-a0V"/>
+                            <constraint firstItem="yY3-jR-JwY" firstAttribute="trailing" secondItem="2yg-1y-EVN" secondAttribute="trailing" constant="90" id="j0n-wt-fgN"/>
+                            <constraint firstItem="2yg-1y-EVN" firstAttribute="centerY" secondItem="L7h-zT-0NC" secondAttribute="centerY" id="rbo-q7-f6D"/>
+                            <constraint firstItem="mXk-3f-mXM" firstAttribute="top" secondItem="2yg-1y-EVN" secondAttribute="bottom" constant="20" id="vLC-Pa-qtl"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="yY3-jR-JwY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B4g-cy-zvX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="903" y="6"/>
+            <point key="canvasLocation" x="1000.8" y="-156.07196401799101"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="oRp-En-4XU">
@@ -58,39 +114,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mev-An-3eU">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="72"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a9J-8O-rDL">
-                                        <rect key="frame" x="12" y="47" width="24" height="18"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a9J-8O-rDL">
+                                        <rect key="frame" x="12" y="41" width="34" height="24"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="24" id="fbu-A3-fmL"/>
-                                            <constraint firstAttribute="height" constant="18" id="q9H-oH-Vfc"/>
+                                            <constraint firstAttribute="height" constant="24" id="4DM-G1-ug4"/>
+                                            <constraint firstAttribute="width" constant="24" id="auR-Lm-A8A"/>
                                         </constraints>
                                         <state key="normal" image="smackBurger"/>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ld-c9-IR3">
-                                        <rect key="frame" x="149.5" y="38" width="75.5" height="36"/>
-                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="26"/>
+                                        <rect key="frame" x="157.5" y="33.5" width="61" height="29"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="21"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.2901960784" green="0.30196078430000001" blue="0.85882352939999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.17254901960784313" green="0.30196078431372547" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="4IQ-Fp-fyu"/>
-                                    <constraint firstItem="a9J-8O-rDL" firstAttribute="leading" secondItem="Mev-An-3eU" secondAttribute="leading" constant="12" id="CV7-M6-uix"/>
-                                    <constraint firstAttribute="bottom" secondItem="a9J-8O-rDL" secondAttribute="bottom" constant="12" id="Dwa-Cq-yak"/>
-                                    <constraint firstItem="4Ld-c9-IR3" firstAttribute="centerX" secondItem="Mev-An-3eU" secondAttribute="centerX" id="aMD-iq-IKT"/>
-                                    <constraint firstItem="4Ld-c9-IR3" firstAttribute="centerY" secondItem="a9J-8O-rDL" secondAttribute="centerY" id="qkl-7j-kwe"/>
-                                    <constraint firstAttribute="height" constant="77" id="t3D-9y-bnE"/>
+                                    <constraint firstAttribute="height" constant="72" id="0br-ro-hpo"/>
+                                    <constraint firstItem="4Ld-c9-IR3" firstAttribute="centerY" secondItem="a9J-8O-rDL" secondAttribute="centerY" id="Guk-Xt-xj4"/>
+                                    <constraint firstAttribute="bottom" secondItem="a9J-8O-rDL" secondAttribute="bottom" constant="12" id="Jpf-16-q0G"/>
+                                    <constraint firstItem="a9J-8O-rDL" firstAttribute="leading" secondItem="Mev-An-3eU" secondAttribute="leading" constant="12" id="XoQ-O8-ysx"/>
+                                    <constraint firstItem="4Ld-c9-IR3" firstAttribute="centerX" secondItem="Mev-An-3eU" secondAttribute="centerX" id="egL-Qk-Oec"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Mev-An-3eU" firstAttribute="top" secondItem="EFa-2J-bvp" secondAttribute="top" id="Z11-oM-JCK"/>
-                            <constraint firstItem="Mev-An-3eU" firstAttribute="leading" secondItem="mC4-qN-JkH" secondAttribute="leading" id="bKU-en-71O"/>
-                            <constraint firstItem="Mev-An-3eU" firstAttribute="trailing" secondItem="mC4-qN-JkH" secondAttribute="trailing" id="jHY-6o-8oS"/>
+                            <constraint firstItem="Mev-An-3eU" firstAttribute="top" secondItem="EFa-2J-bvp" secondAttribute="top" id="8Zu-hi-m7l"/>
+                            <constraint firstItem="Mev-An-3eU" firstAttribute="centerX" secondItem="EFa-2J-bvp" secondAttribute="centerX" id="QXF-Gu-cDL"/>
+                            <constraint firstItem="Mev-An-3eU" firstAttribute="trailing" secondItem="mC4-qN-JkH" secondAttribute="trailing" id="RC3-TZ-W6a"/>
+                            <constraint firstItem="Mev-An-3eU" firstAttribute="leading" secondItem="mC4-qN-JkH" secondAttribute="leading" id="pS7-8p-Ooy"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="mC4-qN-JkH"/>
                     </view>
@@ -100,10 +156,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="big-qR-Shw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="913" y="716"/>
+            <point key="canvasLocation" x="1001" y="508"/>
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
         <image name="smackBurger" width="40" height="40"/>
+        <image name="smackProfileIcon" width="192" height="192"/>
     </resources>
 </document>
