--- a/Smack/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Smack/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -71,6 +72,9 @@
                                 <state key="normal" title="login">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="LoginBtn_Action:" destination="P1f-Up-zc7" eventType="touchUpInside" id="3pX-n2-FMO"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2yg-1y-EVN">
                                 <rect key="frame" x="263" y="90" width="22" height="22"/>
@@ -79,6 +83,30 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mXk-3f-mXM">
                                 <rect key="frame" x="16" y="132" width="343" height="435"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="kNT-Zq-y5A">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kNT-Zq-y5A" id="pli-j5-Tw0">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#genearl" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rv5-IB-geb">
+                                                    <rect key="frame" x="35" y="12" width="70.5" height="21"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="rv5-IB-geb" firstAttribute="centerY" secondItem="pli-j5-Tw0" secondAttribute="centerY" id="YwQ-a4-X9y"/>
+                                                <constraint firstItem="rv5-IB-geb" firstAttribute="leading" secondItem="pli-j5-Tw0" secondAttribute="leadingMargin" constant="20" id="x84-u2-xEV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -100,10 +128,136 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yY3-jR-JwY"/>
                     </view>
+                    <connections>
+                        <outlet property="Login_Button" destination="Yh9-ED-hDE" id="SC0-4K-g4t"/>
+                        <segue destination="WIu-8C-FFx" kind="show" identifier="toLogin_segue" id="am5-XQ-UGV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B4g-cy-zvX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1000.8" y="-156.07196401799101"/>
+        </scene>
+        <!--LoginVC-->
+        <scene sceneID="ytO-ZB-7Tc">
+            <objects>
+                <viewController id="WIu-8C-FFx" customClass="LoginVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="F3H-C7-MUR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="TUm-x3-uyg">
+                                <rect key="frame" x="107" y="60" width="161.5" height="50"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smackLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Dj6-Nx-tuv">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="hEl-gK-w6E"/>
+                                            <constraint firstAttribute="height" constant="50" id="yP1-eZ-Ks4"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKS-4a-qak">
+                                        <rect key="frame" x="50" y="9" width="111.5" height="41"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="34"/>
+                                        <color key="textColor" red="0.25882352941176467" green="0.32941176470588235" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J4c-kr-Hsn">
+                                <rect key="frame" x="328" y="15" width="32" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="cyb-pL-pyc"/>
+                                    <constraint firstAttribute="height" constant="32" id="v9d-hI-2Jr"/>
+                                </constraints>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="LoginCloseBtn_Action:" destination="WIu-8C-FFx" eventType="touchUpInside" id="Stg-Zp-Gs5"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YTh-hw-gLa">
+                                <rect key="frame" x="62.5" y="274" width="250" height="40"/>
+                                <color key="backgroundColor" red="0.35686274509803922" green="0.62352941176470589" blue="0.79607843137254897" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="ap6-Mz-X0G"/>
+                                    <constraint firstAttribute="height" constant="40" id="jK0-HC-nah"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yhl-QT-Oof">
+                                <rect key="frame" x="59" y="334" width="257" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="257" id="7bu-Wm-GoL"/>
+                                    <constraint firstAttribute="height" constant="30" id="F7h-tQ-GNZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Don't have an account? Sing up here"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="JlA-WN-Kxd">
+                                <rect key="frame" x="62" y="140" width="250" height="84"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qG5-G3-Vsn">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="40"/>
+                                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="i3d-r1-bjp"/>
+                                            <constraint firstAttribute="height" constant="40" id="q8x-7r-OCw"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nP5-fz-KCy">
+                                        <rect key="frame" x="0.0" y="40" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="QSg-9R-1p1"/>
+                                            <constraint firstAttribute="height" constant="2" id="RCj-J4-dWl"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fwi-JE-v2G">
+                                        <rect key="frame" x="0.0" y="42" width="250" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="LPa-Sd-MFn"/>
+                                            <constraint firstAttribute="height" constant="40" id="lmS-NE-jv5"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E6t-WQ-qrb">
+                                        <rect key="frame" x="0.0" y="82" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="Kby-rW-Qao"/>
+                                            <constraint firstAttribute="width" constant="250" id="zyq-Ih-ed0"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TUm-x3-uyg" firstAttribute="centerX" secondItem="F3H-C7-MUR" secondAttribute="centerX" id="5DG-Vi-Oda"/>
+                            <constraint firstItem="YTh-hw-gLa" firstAttribute="centerX" secondItem="F3H-C7-MUR" secondAttribute="centerX" id="A7L-ra-HQQ"/>
+                            <constraint firstItem="Yhl-QT-Oof" firstAttribute="centerX" secondItem="F3H-C7-MUR" secondAttribute="centerX" id="GvD-Qm-CFN"/>
+                            <constraint firstItem="JlA-WN-Kxd" firstAttribute="centerX" secondItem="F3H-C7-MUR" secondAttribute="centerX" id="Hfh-6H-wl1"/>
+                            <constraint firstItem="Yhl-QT-Oof" firstAttribute="top" secondItem="YTh-hw-gLa" secondAttribute="bottom" constant="20" id="dKV-Rl-Hso"/>
+                            <constraint firstItem="TUm-x3-uyg" firstAttribute="top" secondItem="1pL-Pn-kJe" secondAttribute="top" constant="40" id="hVI-Hk-sbz"/>
+                            <constraint firstItem="J4c-kr-Hsn" firstAttribute="top" secondItem="F3H-C7-MUR" secondAttribute="top" constant="15" id="nSt-z1-l7d"/>
+                            <constraint firstItem="JlA-WN-Kxd" firstAttribute="top" secondItem="TUm-x3-uyg" secondAttribute="bottom" constant="30" id="tmq-b2-xUE"/>
+                            <constraint firstItem="1pL-Pn-kJe" firstAttribute="trailing" secondItem="J4c-kr-Hsn" secondAttribute="trailing" constant="15" id="wAM-rT-Sxl"/>
+                            <constraint firstItem="YTh-hw-gLa" firstAttribute="top" secondItem="JlA-WN-Kxd" secondAttribute="bottom" constant="50" id="xUi-aK-haQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1pL-Pn-kJe"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CFP-cH-218" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1940" y="-139.880059970015"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="oRp-En-4XU">
@@ -120,7 +274,7 @@
                                         <rect key="frame" x="12" y="41" width="34" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="24" id="4DM-G1-ug4"/>
-                                            <constraint firstAttribute="width" constant="24" id="auR-Lm-A8A"/>
+                                            <constraint firstAttribute="width" constant="30" id="auR-Lm-A8A"/>
                                         </constraints>
                                         <state key="normal" image="smackBurger"/>
                                     </button>
@@ -161,7 +315,9 @@
     </scenes>
     <resources>
         <image name="addChannelButton" width="22" height="22"/>
+        <image name="closeButton" width="28" height="28"/>
         <image name="smackBurger" width="40" height="40"/>
+        <image name="smackLogo" width="48" height="40"/>
         <image name="smackProfileIcon" width="192" height="192"/>
     </resources>
 </document>
